conv-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-service-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      components: converter
  template:
    metadata:
      labels:
        components: converter
    spec:
      containers:
      - name: conv-service
        image: antonlarichev/conv-service:1.0
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 5700
