rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: rabbitmq
  template:
    metadata:
      labels:
        components: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.2.2
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
          requests:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 5672
        volumeMounts:
          - name: rabbitmq-data
            mountPath: /var/lib/rabbitmq
      volumes:
      - name: rabbitmq-data
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
