conv-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-service
spec:
  type: NodePort
  selector:
    components: frontend
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 31200
