conv-service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: conv-service-clusterip
spec:
  selector:
    components: converter
  ports:
  - port: 5700
    protocol: TCP
